<b>Version 0.70:</b> Who cares about finals anyways, it's app time! Finesse and final alpha. Fully functional, fully featured, fully awesome.<br/><br/>
    &#8226; Got the popup working for real this time<br/>
    &#8226; Rewrote all the notification stuff. Expandable, actionable, and dynamic<br/>
    &#8226; DashClock changes<br/>
    &#8226; Native YouTube player<br/>
    &#8226; YouTube thumbnails<br/>
    &#8226; LOTS of speed optimizations for main timeline<br/>
    &#8226; Option to not show the inline pictures<br/>
    &#8226; Much better support for hashtags, links, and user entities in tweets<br/>
    &#8226; Option to turn off and on emoji keyboard from settings. Check if it is installed too<br/>
    &#8226; Major widget changes<br/>
    &#8226; Major updates to the Direct Message compose window<br/>
    &#8226; Add more than one screen name from the user selection dialog<br/>
    &#8226; Widget and image caching fixes<br/>
    &#8226; Lowered the data footprint again<br/>
    &#8226; Made the "Sliding Emoji Keyboard - iOS" compatible as a plugin<br/>
    &#8226; Inline Instagram pictures<br/><br/>
<br/>

<b>Version 0.60:</b> Wah hoo, looking good on the homescreen<br/><br/>
    &#8226; Optimized caching for less data usage and more speed<br/>
    &#8226; Tons of cleanup on the images<br/>
    &#8226; Re-made the compose, profiles, and tweet activities. Look much cleaner now.<br/>
    &#8226; Draft system for unsent tweets<br/>
    &#8226; Emojis added. You have to have our sliding emoji keyboard trial app. Link in settings.<br/>
    &#8226; Fixes for the highlighting of hashtags, users, and links<br/>
    &#8226; New widget<br/>
    &#8226; DashClock Extension<br/>
    &#8226; Style changes to profiles<br/>
    &#8226; Can now search for users by their username as well<br/>
    &#8226; Attach locations to new tweets<br/><br/>
<br/>

<b>Version 0.50:</b> Background is important too!<br/><br/>