@@ -75,7 +75,8 @@ limitations under the License.
         <item name="syncSettings">@drawable/drawer_sync_light</item>
         <item name="advancedSettings">@drawable/drawer_advanced</item>
         <item name="whatsNew">@drawable/ic_action_new_light</item>
-        <item name="worldTrends">@drawable/drawer_trends_light</item>
+        <item name="links">@drawable/drawer_trends_light</item>
+        <item name="worldTrends">@drawable/ic_action_map_light</item>
         <item name="getHelp">@drawable/drawer_help_light</item>
         <item name="otherApps">@drawable/drawer_other_apps_light</item>
         <item name="rateIt">@drawable/drawer_rate_it_light</item>
