@@ -83,7 +83,7 @@ public class MainDrawerArrayAdapter extends ArrayAdapter<String> {
         holder.name.setTextSize(textSize);
 
         if (text.get(position).equals(context.getResources().getString(R.string.links))) {
-            TypedArray a = context.getTheme().obtainStyledAttributes(new int[]{R.attr.worldTrends});
+            TypedArray a = context.getTheme().obtainStyledAttributes(new int[]{R.attr.links});
             int resource = a.getResourceId(0, 0);
             a.recycle();
             holder.icon.setImageResource(resource);
