@@ -1,3 +1,8 @@
+<b>Version 0.80:</b> Cause Brandal has cool ideas too<br/><br/>
+    &#8226; Added a pictures and links tab to the main page<br/>
+    &#8226; Added a windowed photo view with a click on the pictures<br/><br/>
+<br/>
+
 <b>Version 0.70:</b> Who cares about finals anyways, it's app time! Finesse and final alpha. Fully functional, fully featured, fully awesome.<br/><br/>
     &#8226; Got the popup working for real this time<br/>
     &#8226; Rewrote all the notification stuff. Expandable, actionable, and dynamic<br/>
